[api] fix statusbar update function, start work on parse integration

--- a/index.html
+++ b/index.html
@@ -77,13 +77,32 @@
         <!--//////////// MAIN VIEW ////////////-->
         <!--//////////// Employees, Investors, Main Menu with bottom bar ////////////-->
         <section id="main-view" data-transition="slide">
-            <header id="headItems">
-                <div data-icon="home" class="statusbar-item"> 99</div>
-                <div data-icon="users" class="statusbar-item"> 58</div>
-                <div data-icon="upload" class="statusbar-item"> 43</div>
-                <div data-icon="map" class="statusbar-item"> 33</div>
-                <div data-icon="cloud" class="statusbar-item"> 34</div>
-                <div data-icon="menu" class="statusbar-item"> 51,234</div>
+            <header id="head_items">
+                <div data-icon="home" class="statusbar_item">
+                  <input type="text" readonly value="99" id="stat_product" class="stat_item_inp">
+                </div>
+                <div data-icon="right" class="statusbar_item">
+                  <input type="text" readonly value="99" id="stat_talent" class="stat_item_inp">
+                </div>
+                <div data-icon="user" class="statusbar_item">
+                  <input type="text" readonly value="99" id="stat_patents" class="stat_item_inp">
+                </div>
+                <div data-icon="upload" class="statusbar_item">
+                  <input type="text" readonly value="99" id="stat_sat" class="stat_item_inp">
+                </div>
+                <div data-icon="up" class="statusbar_item">
+                  <input type="text" readonly value="99" id="stat_invint" class="stat_item_inp">
+                </div>
+                <div data-icon="left" class="statusbar_item">
+                  <input type="text" readonly value="93559" id="stat_product" class="stat_item_inp">
+                </div>
+                <!--
+                <div data-icon="home" class="statusbar_item"> 99</div>                
+                <div data-icon="users" class="statusbar_item"> 58</div>
+                <div data-icon="upload" class="statusbar_item"> 43</div>
+                <div data-icon="map" class="statusbar_item"> 33</div>
+                <div data-icon="cloud" class="statusbar_item"> 34</div>
+                <div data-icon="menu" class="statusbar_item"> 51,234</div>-->
             </header>
 
 
