--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             <!--
                             if(employeeInformations[0][0][0]>=0){
                                 if(employeeInformations[0][0][0]!=0)
-                                    document.write("<img src='/CoffeeInc2/assets/emp_d_" + employeeInformations[0][0][0] + ".svg'>");
+                                    document.write("<img src='/CoffeeInc2/assets/emp_d_" + employeeInformations[0][0][0] + ".svg' id='empPic00'>");
                                 else{
                                     document.write("<img src='/CoffeeInc2/assets/add.svg' class='add_button' >");
                                     document.getElementById("emp00").href="#employee_hire";
@@ -128,7 +128,7 @@
                             <!--
                             if(employeeInformations[1][0][0]>=0){
                                 if(employeeInformations[1][0][0]!=0)
-                                    document.write("<img src='/CoffeeInc2/assets/emp_d_" + employeeInformations[1][0][0] + ".svg'>");
+                                    document.write("<img src='/CoffeeInc2/assets/emp_d_" + employeeInformations[1][0][0] + ".svg' id='empPic00'>");
                                 else{
                                     document.write("<img src='/CoffeeInc2/assets/add.svg' class='add_button' >");
                                     document.getElementById("emp10").href="#employee_hire";
@@ -141,7 +141,7 @@
                             <!--
                             if(employeeInformations[2][0][0]>=0){
                                 if(employeeInformations[2][0][0]!=0)
-                                    document.write("<img src='/CoffeeInc2/assets/emp_d_" + employeeInformations[2][0][0] + ".svg'>");
+                                    document.write("<img src='/CoffeeInc2/assets/emp_d_" + employeeInformations[2][0][0] + ".svg' id='empPic00'>");
                                 else{
                                     document.write("<img src='/CoffeeInc2/assets/add.svg' class='add_button' >");
                                     document.getElementById("emp20").href="#employee_hire";
@@ -158,7 +158,7 @@
                             <!--
                             if(employeeInformations[0][1][0]>=0){
                                 if(employeeInformations[0][1][0]!=0)
-                                    document.write("<img src='/CoffeeInc2/assets/emp_d_" + employeeInformations[0][1][0] + ".svg'>");
+                                    document.write("<img src='/CoffeeInc2/assets/emp_d_" + employeeInformations[0][1][0] + ".svg' id='empPic00'>");
                                 else{
                                     document.write("<img src='/CoffeeInc2/assets/add.svg' class='add_button' >");
                                     document.getElementById("emp01").href="#employee_hire";
@@ -171,7 +171,7 @@
                             <!--
                             if(employeeInformations[1][1][0]>=0){
                                 if(employeeInformations[1][1][0]!=0)
-                                    document.write("<img src='/CoffeeInc2/assets/emp_d_" + employeeInformations[1][1][0] + ".svg'>");
+                                    document.write("<img src='/CoffeeInc2/assets/emp_d_" + employeeInformations[1][1][0] + ".svg' id='empPic00'>");
                                 else{
                                     document.write("<img src='/CoffeeInc2/assets/add.svg' class='add_button' >");
                                     document.getElementById("emp11").href="#employee_hire";
@@ -184,7 +184,7 @@
                             <!--
                             if(employeeInformations[2][1][0]>=0){
                                 if(employeeInformations[2][1][0]!=0)
-                                    document.write("<img src='/CoffeeInc2/assets/emp_d_" + employeeInformations[2][1][0] + ".svg''>");
+                                    document.write("<img src='/CoffeeInc2/assets/emp_d_" + employeeInformations[2][1][0] + ".svg' id='empPic00''>");
                                 else{
                                     document.write("<img src='/CoffeeInc2/assets/add.svg' class='add_button' >");
                                     document.getElementById("emp21").href="#employee_hire";
@@ -200,7 +200,7 @@
                             <!--
                             if(employeeInformations[0][2][0]>=0){
                                 if(employeeInformations[0][2][0]!=0)
-                                    document.write("<img src='/CoffeeInc2/assets/emp_d_" + employeeInformations[0][2][0] + ".svg'>");
+                                    document.write("<img src='/CoffeeInc2/assets/emp_d_" + employeeInformations[0][2][0] + ".svg' id='empPic00'>");
                                 else{
                                     document.write("<img src='/CoffeeInc2/assets/add.svg' class='add_button' >");
                                     document.getElementById("emp02").href="#employee_hire";
@@ -214,7 +214,7 @@
                                 <!--
                                 if(employeeInformations[1][2][0]>=0){
                                     if(employeeInformations[1][2][0]!=0)
-                                        document.write("<img src='/CoffeeInc2/assets/emp_d_" + employeeInformations[1][2][0] + ".svg'>");
+                                        document.write("<img src='/CoffeeInc2/assets/emp_d_" + employeeInformations[1][2][0] + ".svg' id='empPic00'>");
                                     else{
                                         document.write("<img src='/CoffeeInc2/assets/add.svg' class='add_button' >");
                                         document.getElementById("emp12").href="#employee_hire";
@@ -230,7 +230,7 @@
                                 <!--
                                 if(employeeInformations[2][2][0]>=0){
                                     if(employeeInformations[2][2][0]!=0)
-                                        document.write("<img src='/CoffeeInc2/assets/emp_d_" + employeeInformations[2][2][0] + ".svg'>");
+                                        document.write("<img src='/CoffeeInc2/assets/emp_d_" + employeeInformations[2][2][0] + ".svg' id='empPic00'>");
                                     else{
                                         document.write("<img src='/CoffeeInc2/assets/add.svg' class='add_button' >");
                                         document.getElementById("emp22").href="#employee_hire";
