[ui] changes to animations [api] add functions for firing employees

--- a/menu.html
+++ b/menu.html
@@ -67,14 +67,14 @@
 
             <article class="list">      	
               
-              <form class="login-form" method="post" action="index.html">
+              <form class="login-form">
                 <div class="margined">
                   <img src="assets/game-logo.svg" class="gamelogo">
                   <div class="error" style="display:none"></div>                
                   <input type="text" id="login-username" placeholder="Username" />
                   <input type="password" id="login-password" placeholder="Password" />
                   <button>Log In</button>
-                  <a>
+                  <a> 
                 </div>
               </form>                            
             
