[api] changed employee array structure to one-dimensional (broken right now), introduced objects for employees instead of arrays]

--- a/index.html
+++ b/index.html
@@ -111,40 +111,40 @@
 
                 <div class="three columns">
                     <div class="three rows">
-                        <a href="#employee_profile" data-router="section" onclick="javascript: changeProfileInfo(0,0);" id="emp00"><script type="text/javascript">
+                        <a href="#employee_profile" data-router="section" onclick="javascript: changeProfileInfo(0);" id="emp0"><script type="text/javascript">
                             <!--
-                            if(employeeInformations[0][0][0]>=0){
-                                if(employeeInformations[0][0][0]!=0)
-                                    document.write("<img src='/CoffeeInc2/assets/emp_d_" + employeeInformations[0][0][0] + ".svg' id='empPic00'>");
+                            if(employeeInformations[0].picId>=0){
+                                if(employeeInformations[0].picId!=0)
+                                    document.write("<img src='/CoffeeInc/assets/emp_d_" + employeeInformations[0].picId + ".svg' id='empPic0'>");
                                 else{
-                                    document.write("<img src='/CoffeeInc2/assets/add.svg' class='add_button' >");
-                                    document.getElementById("emp00").href="#employee_hire";
+                                    document.write("<img src='/CoffeeInc/assets/add.svg' class='add_button' >");
+                                    document.getElementById("emp0").href="#employee_hire";
                         }
                     }
                     //--></script></a>
                     </div>
                     <div class="three rows">
-                        <a href="#employee_profile" data-router="section" onclick="javascript: changeProfileInfo(1,0);" id="emp10"><script type="text/javascript">
+                        <a href="#employee_profile" data-router="section" onclick="javascript: changeProfileInfo(1);" id="emp1"><script type="text/javascript">
                             <!--
-                            if(employeeInformations[1][0][0]>=0){
-                                if(employeeInformations[1][0][0]!=0)
-                                    document.write("<img src='/CoffeeInc2/assets/emp_d_" + employeeInformations[1][0][0] + ".svg' id='empPic00'>");
+                            if(employeeInformations[1].picId>=0){
+                                if(employeeInformations[1].picId!=0)
+                                    document.write("<img src='/CoffeeInc/assets/emp_d_" + employeeInformations[1].picId + ".svg' id='empPic1'>");
                                 else{
-                                    document.write("<img src='/CoffeeInc2/assets/add.svg' class='add_button' >");
-                                    document.getElementById("emp10").href="#employee_hire";
+                                    document.write("<img src='/CoffeeInc/assets/add.svg' class='add_button' >");
+                                    document.getElementById("emp1").href="#employee_hire";
                         }
                     }
                     //--></script></a>
                     </div>
                     <div class="three rows">
-                        <a href="#employee_profile" data-router="section" onclick="javascript: changeProfileInfo(2,0);" id="emp20"><script type="text/javascript">
+                        <a href="#employee_profile" data-router="section" onclick="javascript: changeProfileInfo(2);" id="emp2"><script type="text/javascript">
                             <!--
-                            if(employeeInformations[2][0][0]>=0){
-                                if(employeeInformations[2][0][0]!=0)
-                                    document.write("<img src='/CoffeeInc2/assets/emp_d_" + employeeInformations[2][0][0] + ".svg' id='empPic00'>");
+                            if(employeeInformations[2].picId>=0){
+                                if(employeeInformations[2].picId!=0)
+                                    document.write("<img src='/CoffeeInc/assets/emp_d_" + employeeInformations[2].picId + ".svg' id='empPic00'>");
                                 else{
-                                    document.write("<img src='/CoffeeInc2/assets/add.svg' class='add_button' >");
-                                    document.getElementById("emp20").href="#employee_hire";
+                                    document.write("<img src='/CoffeeInc/assets/add.svg' class='add_button' >");
+                                    document.getElementById("emp2").href="#employee_hire";
                         }
                     }
                     //--></script></a>
@@ -154,40 +154,40 @@
 
                 <div class="three columns">
                     <div class="three rows">
-                        <a href="#employee_profile" data-router="section" onclick="javascript: changeProfileInfo(0,1);" id="emp01"><script type="text/javascript">
+                        <a href="#employee_profile" data-router="section" onclick="javascript: changeProfileInfo(3);" id="emp3"><script type="text/javascript">
                             <!--
-                            if(employeeInformations[0][1][0]>=0){
-                                if(employeeInformations[0][1][0]!=0)
-                                    document.write("<img src='/CoffeeInc2/assets/emp_d_" + employeeInformations[0][1][0] + ".svg' id='empPic00'>");
+                            if(employeeInformations[3].picId>=0){
+                                if(employeeInformations[3].picId!=0)
+                                    document.write("<img src='/CoffeeInc/assets/emp_d_" + employeeInformations[3].picId + ".svg' id='empPic3'>");
                                 else{
-                                    document.write("<img src='/CoffeeInc2/assets/add.svg' class='add_button' >");
-                                    document.getElementById("emp01").href="#employee_hire";
+                                    document.write("<img src='/CoffeeInc/assets/add.svg' class='add_button' >");
+                                    document.getElementById("emp3").href="#employee_hire";
                         }
                     }
                     //--></script></a>
                     </div>
                     <div class="three rows">
-                        <a href="#employee_profile" data-router="section" onclick="javascript: changeProfileInfo(1,1);" id="emp11"><script type="text/javascript">
+                        <a href="#employee_profile" data-router="section" onclick="javascript: changeProfileInfo(4);" id="emp4"><script type="text/javascript">
                             <!--
-                            if(employeeInformations[1][1][0]>=0){
-                                if(employeeInformations[1][1][0]!=0)
-                                    document.write("<img src='/CoffeeInc2/assets/emp_d_" + employeeInformations[1][1][0] + ".svg' id='empPic00'>");
+                            if(employeeInformations[4].picId>=0){
+                                if(employeeInformations[4].picId!=0)
+                                    document.write("<img src='/CoffeeInc/assets/emp_d_" + employeeInformations[4].picId + ".svg' id='empPic4'>");
                                 else{
-                                    document.write("<img src='/CoffeeInc2/assets/add.svg' class='add_button' >");
-                                    document.getElementById("emp11").href="#employee_hire";
+                                    document.write("<img src='/CoffeeInc/assets/add.svg' class='add_button' >");
+                                    document.getElementById("emp4").href="#employee_hire";
                         }
                     }
                     //--></script></a>
                     </div>
                     <div class="three rows">
-                        <a href="#employee_profile" data-router="section" onclick="javascript: changeProfileInfo(2,1);" id="emp21"><script type="text/javascript">
+                        <a href="#employee_profile" data-router="section" onclick="javascript: changeProfileInfo(5);" id="emp5"><script type="text/javascript">
                             <!--
-                            if(employeeInformations[2][1][0]>=0){
-                                if(employeeInformations[2][1][0]!=0)
-                                    document.write("<img src='/CoffeeInc2/assets/emp_d_" + employeeInformations[2][1][0] + ".svg' id='empPic00''>");
+                            if(employeeInformations[5].picId>=0){
+                                if(employeeInformations[5].picId!=0)
+                                    document.write("<img src='/CoffeeInc/assets/emp_d_" + employeeInformations[5].picId + ".svg' id='empPic5'>");
                                 else{
-                                    document.write("<img src='/CoffeeInc2/assets/add.svg' class='add_button' >");
-                                    document.getElementById("emp21").href="#employee_hire";
+                                    document.write("<img src='/CoffeeInc/assets/add.svg' class='add_button' >");
+                                    document.getElementById("emp5").href="#employee_hire";
                         }
                     }
                     //--></script></a>
@@ -196,28 +196,28 @@
 
                 <div class="three columns">
                     <div class="three rows">
-                        <a href="#employee_profile" data-router="section" onclick="javascript: changeProfileInfo(0,2);" id="emp02"><script type="text/javascript">
+                        <a href="#employee_profile" data-router="section" onclick="javascript: changeProfileInfo(6);" id="emp6"><script type="text/javascript">
                             <!--
-                            if(employeeInformations[0][2][0]>=0){
-                                if(employeeInformations[0][2][0]!=0)
-                                    document.write("<img src='/CoffeeInc2/assets/emp_d_" + employeeInformations[0][2][0] + ".svg' id='empPic00'>");
+                            if(employeeInformations[6].picId>=0){
+                                if(employeeInformations[6].picId!=0)
+                                    document.write("<img src='/CoffeeInc/assets/emp_d_" + employeeInformations[6].picId + ".svg' id='empPic6'>");
                                 else{
-                                    document.write("<img src='/CoffeeInc2/assets/add.svg' class='add_button' >");
-                                    document.getElementById("emp02").href="#employee_hire";
+                                    document.write("<img src='/CoffeeInc/assets/add.svg' class='add_button' >");
+                                    document.getElementById("emp6").href="#employee_hire";
                         }
                     }
                     //--></script></a>
                     </div>
                     <div class="three rows">
-                        <a href="#employee_profile" data-router="section" onclick="javascript: changeProfileInfo(1,2);" id="emp12">
+                        <a href="#employee_profile" data-router="section" onclick="javascript: changeProfileInfo(7);" id="emp7">
                             <script type="text/javascript">
                                 <!--
-                                if(employeeInformations[1][2][0]>=0){
-                                    if(employeeInformations[1][2][0]!=0)
-                                        document.write("<img src='/CoffeeInc2/assets/emp_d_" + employeeInformations[1][2][0] + ".svg' id='empPic00'>");
+                                if(employeeInformations[7].picId>=0){
+                                    if(employeeInformations[7].picId!=0)
+                                        document.write("<img src='/CoffeeInc/assets/emp_d_" + employeeInformations[7].picId + ".svg' id='empPic7'>");
                                     else{
-                                        document.write("<img src='/CoffeeInc2/assets/add.svg' class='add_button' >");
-                                        document.getElementById("emp12").href="#employee_hire";
+                                        document.write("<img src='/CoffeeInc/assets/add.svg' class='add_button' >");
+                                        document.getElementById("emp7").href="#employee_hire";
                                     }
                                 }
                                 //-->
@@ -225,15 +225,15 @@
                         </a>
                     </div>
                     <div class="three rows">
-                        <a href="#employee_profile" data-router="section" onclick="javascript: changeProfileInfo(2,2);" id="emp22">
+                        <a href="#employee_profile" data-router="section" onclick="javascript: changeProfileInfo(8);" id="emp8">
                             <script type="text/javascript">
                                 <!--
-                                if(employeeInformations[2][2][0]>=0){
-                                    if(employeeInformations[2][2][0]!=0)
-                                        document.write("<img src='/CoffeeInc2/assets/emp_d_" + employeeInformations[2][2][0] + ".svg' id='empPic00'>");
+                                if(employeeInformations[8].picId>=0){
+                                    if(employeeInformations[8].picId!=0)
+                                        document.write("<img src='/CoffeeInc/assets/emp_d_" + employeeInformations[8].picId + ".svg' id='empPic8'>");
                                     else{
-                                        document.write("<img src='/CoffeeInc2/assets/add.svg' class='add_button' >");
-                                        document.getElementById("emp22").href="#employee_hire";
+                                        document.write("<img src='/CoffeeInc/assets/add.svg' class='add_button' >");
+                                        document.getElementById("emp8").href="#employee_hire";
                                     }
                                 }
                                 //-->
@@ -390,7 +390,7 @@
                             var randomSat=Math.floor(Math.random()*100)+1;
                             var randomSalary=Math.floor(Math.random()*1500)+501;
                             //document.getElementById("randomEmp1").onclick="hireEmployee("+hireTmpX+","+hireTmpY+","+randomNumber+","+randomSkill+","+randomSat+","+randomSalary+")";
-                            document.write('<img src="/CoffeeInc2/assets/emp_'+randomNumber+'.svg" class="employee_hire_pic" onclick="javascript:hireEmployee('+randomNumber+','+randomSkill+','+randomSat+','+randomSalary+');">');
+                            document.write('<img src="/CoffeeInc/assets/emp_'+randomNumber+'.svg" class="employee_hire_pic" onclick="javascript:hireEmployee('+randomNumber+','+randomSkill+','+randomSat+','+randomSalary+');">');
                             document.write('<div class="hireinfo">');
                             document.write('<a data-icon="user">'+randomSkill+'</a>');
                             document.write('<a data-icon="home">'+randomSat+'</a>');
@@ -410,7 +410,7 @@
                             var randomSat=Math.floor(Math.random()*100)+1;
                             var randomSalary=Math.floor(Math.random()*1500)+501;
                             //document.getElementById("randomEmp2").onclick="hireEmployee("+hireTmpX+","+hireTmpY+","+randomNumber+","+randomSkill+","+randomSat+","+randomSalary+")";
-                            document.write('<img src="/CoffeeInc2/assets/emp_'+randomNumber+'.svg" class="employee_hire_pic" onclick="javascript:hireEmployee('+randomNumber+','+randomSkill+','+randomSat+','+randomSalary+');">');
+                            document.write('<img src="/CoffeeInc/assets/emp_'+randomNumber+'.svg" class="employee_hire_pic" onclick="javascript:hireEmployee('+randomNumber+','+randomSkill+','+randomSat+','+randomSalary+');">');
                             document.write('<div class="hireinfo">');
                             document.write('<a data-icon="user">'+randomSkill+'</a>');
                             document.write('<a data-icon="home">'+randomSat+'</a>');
@@ -430,7 +430,7 @@
                             var randomSat=Math.floor(Math.random()*100)+1;
                             var randomSalary=Math.floor(Math.random()*1500)+501;
                             //document.getElementById("randomEmp3").onclick="javascript:hireEmployee("+hireTmpX+","+hireTmpY+","+randomNumber+","+randomSkill+","+randomSat+","+randomSalary+");";
-                            document.write('<img src="/CoffeeInc2/assets/emp_'+randomNumber+'.svg" class="employee_hire_pic" onclick="javascript:hireEmployee('+randomNumber+','+randomSkill+','+randomSat+','+randomSalary+');">');
+                            document.write('<img src="/CoffeeInc/assets/emp_'+randomNumber+'.svg" class="employee_hire_pic" onclick="javascript:hireEmployee('+randomNumber+','+randomSkill+','+randomSat+','+randomSalary+');">');
                             document.write('<div class="hireinfo">');
                             document.write('<a data-icon="user">'+randomSkill+'</a>');
                             document.write('<a data-icon="home">'+randomSat+'</a>');
@@ -450,7 +450,7 @@
                             var randomSat=Math.floor(Math.random()*100)+1;
                             var randomSalary=Math.floor(Math.random()*1500)+501;
                             //document.getElementById("randomEmp4").onclick="javascript:hireEmployee("+hireTmpX+","+hireTmpY+","+randomNumber+","+randomSkill+","+randomSat+","+randomSalary+");";
-                            document.write('<img src="/CoffeeInc2/assets/emp_'+randomNumber+'.svg" class="employee_hire_pic" onclick="javascript:hireEmployee('+randomNumber+','+randomSkill+','+randomSat+','+randomSalary+');">');
+                            document.write('<img src="/CoffeeInc/assets/emp_'+randomNumber+'.svg" class="employee_hire_pic" onclick="javascript:hireEmployee('+randomNumber+','+randomSkill+','+randomSat+','+randomSalary+');">');
                             document.write('<div class="hireinfo">');
                             document.write('<a data-icon="user">'+randomSkill+'</a>');
                             document.write('<a data-icon="home">'+randomSat+'</a>');
