[minor] some small changes

--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
                     <div class="three rows">
                         <a href="#employee_profile" data-router="section" onclick="javascript: changeProfileInfo(0);" id="emp0"><script type="text/javascript">
                             <!--
-                            if(employeeInformations[0].picId>=0){
-                                if(employeeInformations[0].picId!=0)
-                                    document.write("<img src='/CoffeeInc/assets/emp_d_" + employeeInformations[0].picId + ".svg' id='empPic0'>");
+                            if(employeeInformation[0].picId>=0){
+                                if(employeeInformation[0].picId!=0)
+                                    document.write("<img src='/CoffeeInc/assets/emp_d_" + employeeInformation[0].picId + ".svg' id='empPic0'>");
                                 else{
                                     document.write("<img src='/CoffeeInc/assets/add.svg' class='add_button' >");
                                     document.getElementById("emp0").href="#employee_hire";
@@ -126,9 +126,9 @@
                     <div class="three rows">
                         <a href="#employee_profile" data-router="section" onclick="javascript: changeProfileInfo(1);" id="emp1"><script type="text/javascript">
                             <!--
-                            if(employeeInformations[1].picId>=0){
-                                if(employeeInformations[1].picId!=0)
-                                    document.write("<img src='/CoffeeInc/assets/emp_d_" + employeeInformations[1].picId + ".svg' id='empPic1'>");
+                            if(employeeInformation[1].picId>=0){
+                                if(employeeInformation[1].picId!=0)
+                                    document.write("<img src='/CoffeeInc/assets/emp_d_" + employeeInformation[1].picId + ".svg' id='empPic1'>");
                                 else{
                                     document.write("<img src='/CoffeeInc/assets/add.svg' class='add_button' >");
                                     document.getElementById("emp1").href="#employee_hire";
@@ -139,9 +139,9 @@
                     <div class="three rows">
                         <a href="#employee_profile" data-router="section" onclick="javascript: changeProfileInfo(2);" id="emp2"><script type="text/javascript">
                             <!--
-                            if(employeeInformations[2].picId>=0){
-                                if(employeeInformations[2].picId!=0)
-                                    document.write("<img src='/CoffeeInc/assets/emp_d_" + employeeInformations[2].picId + ".svg' id='empPic00'>");
+                            if(employeeInformation[2].picId>=0){
+                                if(employeeInformation[2].picId!=0)
+                                    document.write("<img src='/CoffeeInc/assets/emp_d_" + employeeInformation[2].picId + ".svg' id='empPic00'>");
                                 else{
                                     document.write("<img src='/CoffeeInc/assets/add.svg' class='add_button' >");
                                     document.getElementById("emp2").href="#employee_hire";
@@ -156,9 +156,9 @@
                     <div class="three rows">
                         <a href="#employee_profile" data-router="section" onclick="javascript: changeProfileInfo(3);" id="emp3"><script type="text/javascript">
                             <!--
-                            if(employeeInformations[3].picId>=0){
-                                if(employeeInformations[3].picId!=0)
-                                    document.write("<img src='/CoffeeInc/assets/emp_d_" + employeeInformations[3].picId + ".svg' id='empPic3'>");
+                            if(employeeInformation[3].picId>=0){
+                                if(employeeInformation[3].picId!=0)
+                                    document.write("<img src='/CoffeeInc/assets/emp_d_" + employeeInformation[3].picId + ".svg' id='empPic3'>");
                                 else{
                                     document.write("<img src='/CoffeeInc/assets/add.svg' class='add_button' >");
                                     document.getElementById("emp3").href="#employee_hire";
@@ -169,9 +169,9 @@
                     <div class="three rows">
                         <a href="#employee_profile" data-router="section" onclick="javascript: changeProfileInfo(4);" id="emp4"><script type="text/javascript">
                             <!--
-                            if(employeeInformations[4].picId>=0){
-                                if(employeeInformations[4].picId!=0)
-                                    document.write("<img src='/CoffeeInc/assets/emp_d_" + employeeInformations[4].picId + ".svg' id='empPic4'>");
+                            if(employeeInformation[4].picId>=0){
+                                if(employeeInformation[4].picId!=0)
+                                    document.write("<img src='/CoffeeInc/assets/emp_d_" + employeeInformation[4].picId + ".svg' id='empPic4'>");
                                 else{
                                     document.write("<img src='/CoffeeInc/assets/add.svg' class='add_button' >");
                                     document.getElementById("emp4").href="#employee_hire";
@@ -182,9 +182,9 @@
                     <div class="three rows">
                         <a href="#employee_profile" data-router="section" onclick="javascript: changeProfileInfo(5);" id="emp5"><script type="text/javascript">
                             <!--
-                            if(employeeInformations[5].picId>=0){
-                                if(employeeInformations[5].picId!=0)
-                                    document.write("<img src='/CoffeeInc/assets/emp_d_" + employeeInformations[5].picId + ".svg' id='empPic5'>");
+                            if(employeeInformation[5].picId>=0){
+                                if(employeeInformation[5].picId!=0)
+                                    document.write("<img src='/CoffeeInc/assets/emp_d_" + employeeInformation[5].picId + ".svg' id='empPic5'>");
                                 else{
                                     document.write("<img src='/CoffeeInc/assets/add.svg' class='add_button' >");
                                     document.getElementById("emp5").href="#employee_hire";
@@ -198,9 +198,9 @@
                     <div class="three rows">
                         <a href="#employee_profile" data-router="section" onclick="javascript: changeProfileInfo(6);" id="emp6"><script type="text/javascript">
                             <!--
-                            if(employeeInformations[6].picId>=0){
-                                if(employeeInformations[6].picId!=0)
-                                    document.write("<img src='/CoffeeInc/assets/emp_d_" + employeeInformations[6].picId + ".svg' id='empPic6'>");
+                            if(employeeInformation[6].picId>=0){
+                                if(employeeInformation[6].picId!=0)
+                                    document.write("<img src='/CoffeeInc/assets/emp_d_" + employeeInformation[6].picId + ".svg' id='empPic6'>");
                                 else{
                                     document.write("<img src='/CoffeeInc/assets/add.svg' class='add_button' >");
                                     document.getElementById("emp6").href="#employee_hire";
@@ -212,9 +212,9 @@
                         <a href="#employee_profile" data-router="section" onclick="javascript: changeProfileInfo(7);" id="emp7">
                             <script type="text/javascript">
                                 <!--
-                                if(employeeInformations[7].picId>=0){
-                                    if(employeeInformations[7].picId!=0)
-                                        document.write("<img src='/CoffeeInc/assets/emp_d_" + employeeInformations[7].picId + ".svg' id='empPic7'>");
+                                if(employeeInformation[7].picId>=0){
+                                    if(employeeInformation[7].picId!=0)
+                                        document.write("<img src='/CoffeeInc/assets/emp_d_" + employeeInformation[7].picId + ".svg' id='empPic7'>");
                                     else{
                                         document.write("<img src='/CoffeeInc/assets/add.svg' class='add_button' >");
                                         document.getElementById("emp7").href="#employee_hire";
@@ -228,9 +228,9 @@
                         <a href="#employee_profile" data-router="section" onclick="javascript: changeProfileInfo(8);" id="emp8">
                             <script type="text/javascript">
                                 <!--
-                                if(employeeInformations[8].picId>=0){
-                                    if(employeeInformations[8].picId!=0)
-                                        document.write("<img src='/CoffeeInc/assets/emp_d_" + employeeInformations[8].picId + ".svg' id='empPic8'>");
+                                if(employeeInformation[8].picId>=0){
+                                    if(employeeInformation[8].picId!=0)
+                                        document.write("<img src='/CoffeeInc/assets/emp_d_" + employeeInformation[8].picId + ".svg' id='empPic8'>");
                                     else{
                                         document.write("<img src='/CoffeeInc/assets/add.svg' class='add_button' >");
                                         document.getElementById("emp8").href="#employee_hire";
