[api] include jquery 1.8.3 (for localstorage)

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <script src="lib/components/quojs/quo.js"></script>
         <script src="lib/components/lungo/lungo.js"></script>
 
-        <script src="lib/parse.js"></script>        
+        <script src="lib/jquery.js"></script>        
         <script src="lib/coffeeinc.js"></script>
         <!-- Lungo - Sandbox App -->
 
