[ui] start work on new ui style css

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <!--//////////// MAIN VIEW ////////////-->
         <!--//////////// Employees, Investors, Main Menu with bottom bar ////////////-->
         <section id="main-view" data-transition="slide">
-            <header id="head_items">
+            <header id="head_items" class="brownbg">
                 <div data-icon="home" class="statusbar_item">
                   <input type="text" readonly value="99" id="stat_product" class="stat_item_inp">
                 </div>
@@ -368,7 +368,7 @@
 
 
             <footer>
-                <nav>
+                <nav class="brownbg">
                     <a href="#employees" data-router="article" class="current" data-icon="user"></a>
                     <a href="#investors" data-router="article" data-icon="inbox"></a>
                     <a href="#menu-ingame" data-router="article" data-icon="settings"></a>
